--- a/TestExcel/Views/Data/Department.cshtml
+++ b/TestExcel/Views/Data/Department.cshtml
@@ -4,11 +4,16 @@
     ViewBag.Title = "Department";
     Layout = "~/Views/Shared/_TimeScheduleLayout.cshtml";
 }
-<h2>Department</h2>
-<br>
 <div class="w3-row w3-center fontup">
-    @Html.ActionLink("แก้ไขข้อมูล", "Section", "Data", new { style = "color:blue;font-size:20px" })  |
+    @Html.ActionLink("เซคชั่น", "Section", "Data", new { style = "color:blue;font-size:20px" })  |
+    @Html.ActionLink("วิชาเรียน", "Subject", "Data", new { style = "color:blue;font-size:20px" })  |
+    @Html.ActionLink("สาขาวิชา", "Branch", "Data", new { style = "color:blue;font-size:20px" })  |
+    @Html.ActionLink("อาคารเรียน/ห้องเรียน", "Building", "Data", new { style = "color:blue;font-size:20px" })  |
+    @Html.ActionLink("ภาควิชา", "Department", "Data", new { style = "color:blue;font-size:20px" })  |
+    @Html.ActionLink("อาจารย์", "Professor", "Data", new { style = "color:blue;font-size:20px" })  |
+    @Html.ActionLink("User", "Member", "Data", new { style = "color:blue;font-size:20px" })
 </div>
+<br>
 <div class="container">
     <a href="#" onclick="AddNew(0)" class="btn btn-info">Add New</a><br /><br />
 
@@ -26,10 +31,10 @@
             {
                 <tr>
                     <td id="TdepartName_@item.DEPARTMENT_ID">
-                        @item.DEPARTMENT_NAME
+                        <p>@item.DEPARTMENT_NAME</p>
                     </td>
                     <td id="TdepartThaiName_@item.DEPARTMENT_ID">
-                        @item.DEPARTMENT_THAI_NAME
+                        <p>@item.DEPARTMENT_THAI_NAME</p>
                     </td>
                     <td>
                         <a href="#" onclick="EditRecord(@item.DEPARTMENT_ID)"><span class="btn btn-success fa fa-pencil"></span></a>
@@ -106,8 +111,8 @@
     }
     function EditRecord(DEPARTMENT_ID) {
         $("#DEPARTMENT_ID").val(DEPARTMENT_ID);
-        $("#DEPARTMENT_NAME").val($("#TdepartName_" + DEPARTMENT_ID).html().trim());
-        $("#DEPARTMENT_THAI_NAME").val($("#TdepartThaiName_" + DEPARTMENT_ID).html().trim());
+        $("#DEPARTMENT_NAME").val($("#TdepartName_" + DEPARTMENT_ID + " p").html().trim());
+        $("#DEPARTMENT_THAI_NAME").val($("#TdepartThaiName_" + DEPARTMENT_ID + " p").html().trim());
         $("#ModalTitle").html("Update Department Record");
         $("#MyModal").modal();
     }
