--- a/TestExcel/Views/Data/Subject.cshtml
+++ b/TestExcel/Views/Data/Subject.cshtml
@@ -4,14 +4,35 @@
     ViewBag.Title = "Subject";
     Layout = "~/Views/Shared/_TimeScheduleLayout.cshtml";
 }
-<h2>Subject</h2>
-<br>
 <div class="w3-row w3-center fontup">
-    @Html.ActionLink("แก้ไขข้อมูล", "Section", "Data", new { style = "color:blue;font-size:20px" })  |
+    @Html.ActionLink("เซคชั่น", "Section", "Data", new { style = "color:blue;font-size:20px" })  |
+    @Html.ActionLink("วิชาเรียน", "Subject", "Data", new { style = "color:blue;font-size:20px" })  |
+    @Html.ActionLink("สาขาวิชา", "Branch", "Data", new { style = "color:blue;font-size:20px" })  |
+    @Html.ActionLink("อาคารเรียน/ห้องเรียน", "Building", "Data", new { style = "color:blue;font-size:20px" })  |
+    @Html.ActionLink("ภาควิชา", "Department", "Data", new { style = "color:blue;font-size:20px" })  |
+    @Html.ActionLink("อาจารย์", "Professor", "Data", new { style = "color:blue;font-size:20px" })  |
+    @Html.ActionLink("User", "Member", "Data", new { style = "color:blue;font-size:20px" })
 </div>
+<br>
 <div class="container">
-    <a href="#" onclick="AddNew(0)" class="btn btn-info">Add New</a><br /><br />
-
+    <a href="#" onclick="AddNew(0)" class="btn btn-info pull-right">Add New</a><br /><br />
+    <table border="0" cellspacing="5" cellpadding="5">
+        <tbody>
+            <tr>
+                <td align="right"><b>ปีการศึกษา&nbsp;</b></td>
+                <td colspan="5" style="padding-right:1em">@Html.DropDownList("ddl_Year", (SelectList)ViewBag.ddl_SemesterYear, new { @class = "form-control", style = "" })</td>
+                <td align="right"><b>ภาคการศึกษา&nbsp;</b></td>
+                <td colspan="5" style="padding-right:1em">
+                    <select class="form-control" id="ddl_Semester" name="ddl_Semester">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                    </select>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+    <br>
     <table class="w3-table-all" id="DataTable" name="DataTable">
         <thead>
             <tr class="w3-blue">
@@ -33,31 +54,31 @@
             {
                 <tr>
                     <td id="TsubjectId_@item.ID">
-                        @item.SUBJECT_ID
+                        <p>@item.SUBJECT_ID</p>
                     </td>
                     <td id="TsubjectName_@item.ID">
-                        @item.SUBJECT_NAME
+                        <p>@item.SUBJECT_NAME</p>
                     </td>
                     <td id="TsubjectCredit_@item.ID">
-                        @item.SUBJECT_CREDIT
+                        <p>@item.SUBJECT_CREDIT</p>
                     </td>
                     <td id="TsubjectMidDate_@item.ID">
-                        @item.SUBJECT_MIDTERM_DATE
+                        <p>@item.SUBJECT_MIDTERM_DATE</p>
                     </td>
                     <td id="TsubjectMidTime_@item.ID">
-                        @item.SUBJECT_MIDTERM_TIME
+                        <p>@item.SUBJECT_MIDTERM_TIME</p>
                     </td>
                     <td id="TsubjectFinalDate_@item.ID">
-                        @item.SUBJECT_FINAL_DATE
+                        <p>@item.SUBJECT_FINAL_DATE</p>
                     </td>
                     <td id="TsubjectFinalTime_@item.ID">
-                        @item.SUBJECT_FINAL_TIME
+                        <p>@item.SUBJECT_FINAL_TIME</p>
                     </td>
                     <td id="Tsemester_@item.ID">
-                        @item.SEMESTER
+                        <p>@item.SEMESTER</p>
                     </td>
                     <td id="Tyear_@item.ID">
-                        @item.YEAR
+                        <p>@item.YEAR</p>
                     </td>
                     <td>
                         <a href="#" onclick="EditRecord(@item.ID)"><span class="btn btn-success fa fa-pencil"></span></a>
@@ -146,6 +167,7 @@
 </div>
 
 <script>
+    $(document).ready(function () {
     //Show The Popup Modal
     function AddNew(ID) {
         $("#ID").val(0);
@@ -163,15 +185,15 @@
     }
     function EditRecord(ID) {
         $("#ID").val(ID);
-        $("#SUBJECT_ID").val($("#TsubjectId_" + ID).html().trim());
-        $("#SUBJECT_NAME").val($("#TsubjectName_" + ID).html().trim());
-        $("#SUBJECT_CREDIT").val($("#TsubjectCredit_" + ID).html().trim());
-        $("#SUBJECT_MIDTERM_DATE").val($("#TsubjectMidDate_" + ID).html().trim());
-        $("#SUBJECT_MIDTERM_TIME").val($("#TsubjectMidTime_" + ID).html().trim());
-        $("#SUBJECT_FINAL_DATE").val($("#TsubjectFinalDate_" + ID).html().trim());
-        $("#SUBJECT_FINAL_TIME").val($("#TsubjectFinalTime_" + ID).html().trim());
-        $("#SEMESTER").val($("#Tsemester_" + ID).html().trim());
-        $("#YEAR").val($("#Tyear_" + ID).html().trim());
+        $("#SUBJECT_ID").val($("#TsubjectId_" + ID + " p").html().trim());
+        $("#SUBJECT_NAME").val($("#TsubjectName_" + ID + " p").html().trim());
+        $("#SUBJECT_CREDIT").val($("#TsubjectCredit_" + ID + " p").html().trim());
+        $("#SUBJECT_MIDTERM_DATE").val($("#TsubjectMidDate_" + ID + " p").html().trim());
+        $("#SUBJECT_MIDTERM_TIME").val($("#TsubjectMidTime_" + ID + " p").html().trim());
+        $("#SUBJECT_FINAL_DATE").val($("#TsubjectFinalDate_" + ID + " p").html().trim());
+        $("#SUBJECT_FINAL_TIME").val($("#TsubjectFinalTime_" + ID + " p").html().trim());
+        $("#SEMESTER").val($("#Tsemester_" + ID + " p").html().trim());
+        $("#YEAR").val($("#Tyear_" + ID + " p").html().trim());
         $("#ModalTitle").html("Update Subject Record");
         $("#MyModal").modal();
     }
@@ -179,8 +201,22 @@
         $("#Del_ID").val(ID);
         $("#DeleteConfirmation").modal("show");
     }
-    $('#DataTable').DataTable({
-        "pagingType": "full_numbers",
-        "lengthMenu": [[10, 25, 50, -1], [10, 25, 50, "All"]]
+    var table = $('#DataTable').DataTable();
+    $('#ddl_Year, #ddl_Semester').change(function () {
+        table.draw();
+    }).change();
+    $.fn.dataTable.ext.search.push(
+        function (settings, data, dataIndex) {
+            var Year = parseInt($('#ddl_Year').val());
+            var Semester = parseInt($('#ddl_Semester').val());
+            var data_semester = parseInt(data[7]);
+            var data_year = parseInt(data[8]);
+
+            if (Year == data_year && Semester == data_semester) {
+                return true;
+            }
+            return false;
+        }
+    );
     });
 </script>
